# VPShuntDetector

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: checks.yml
tests/: test_all.py
vpshunt_detector/: __main__.py  download.py  inference.py  main.py  utils.py
